[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/BulletGreen.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GreenProjectile.gd" type="Script" id=2]
[ext_resource path="res://Assets/BulletGlowGreen.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.74031, 2.83268 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.175497, 0.726937, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.219608, 0.85098, 0.45098, 1, 0.341527, 0.489936, 0.395917, 1, 0.176471, 0.168627, 0.172549, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 5.4054 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.00571428, 0.432432 ), 0.0, 0.0, 0, 0, Vector2( 0.694286, 1 ), -0.0426107, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 2, 1.5, 0 )
flag_align_y = true
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_curve = SubResource( 5 )
scale = 3.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 3 )

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1

[node name="Area2D" type="Area2D"]
show_behind_parent = true
collision_layer = 4
collision_mask = 257
audio_bus_override = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.1, 1.1, 1.1, 1 )
position = Vector2( 0, -0.5 )
rotation = 4.71239
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.428959, -0.0373001 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.0552063, 0 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1.1, 1.1, 1.1, 1 )
show_behind_parent = true
position = Vector2( -1, 0 )
rotation = 3.14159
amount = 150
lifetime = 1.5
local_coords = false
process_material = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="Tweenie" type="Tween" parent="."]

[node name="glowcircle" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.27 )
material = SubResource( 9 )
position = Vector2( 0.0551462, -0.487124 )
rotation = -1.5708
texture = ExtResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
